Plantilla HTML añadida

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "${workspaceFolder}/myenv/bin/python"
+    "python.pythonPath": "${workspaceFolder}/myenv/bin/python",
+    "python.linting.pylintEnabled": false
 }
